# aws-greengrass-sdk-lite

./: flake.nix
cpp/include/ggl/: types.hpp
include/ggl/: buffer.h  cbmc.h  error.h
include/ggl/ipc/: client.h  client_raw.h
misc/: check_contracts.py
priv_include/ggl/: log.h  macro_util.h
rust/: Cargo.toml  build.rs
rust/ggl-sdk-sys/: Cargo.toml  build.rs
rust/ggl-sdk-sys/src/: arena.rs  base64.rs  buffer.rs  error.rs  lib.rs  list.rs  map.rs  object.rs  sdk.rs
rust/ggl-sdk-sys/src/ipc/: client.rs  client_raw.rs  limits.rs  mod.rs
rust/src/: error.rs  lib.rs  object.rs
rust/src/c/: arena.rs  base64.rs  buffer.rs  flags.rs  list.rs  map.rs  mod.rs  object.rs
rust/src/c/ipc/: client.rs  client_raw.rs
src/ipc/: client.c
